@@ -130,7 +130,12 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
   useJUnitPlatform()
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+}
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 checkstyle {
@@ -343,6 +348,7 @@ configurations {
 }
 
 dependencies {
+
   modules {
     module("org.codehaus.groovy:groovy") {
       replacedBy("org.apache.groovy:groovy", "conflicts in current rest-assured version")
@@ -362,13 +368,20 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.7'
+  implementation(group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.7') {
+    exclude group: "org.bouncycastle", module: "bcprov-jdk15on"
+  }
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-dependencies', version: '2021.0.8'
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
+  implementation(group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE') {
+    exclude group: "org.bouncycastle", module: "bcprov-jdk15on"
+  }
 
   implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client'
   implementation group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server'
   implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose'
+
+  implementation group: 'org.springframework', name: 'spring-aspects', version: '6.0.14'
+  implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.2'
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.0.1'
 
@@ -392,7 +405,9 @@ dependencies {
 
   implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
 
-  implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.4'
+  implementation(group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0') {
+    exclude group: "org.bouncycastle", module: "bcprov-jdk15on"
+  }
 
   implementation group:  'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
 
@@ -401,6 +416,7 @@ dependencies {
 
   implementation group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.4'
 
+  implementation group: 'org.bouncycastle', name: 'bcprov-jdk18on', version: '1.74'
 
   implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
 
@@ -409,6 +425,9 @@ dependencies {
 
   implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
 
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
+
+  implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine'
 
   annotationProcessor 'org.projectlombok:lombok:1.18.30'
   implementation 'org.projectlombok:lombok:1.18.30'
@@ -423,6 +442,7 @@ dependencies {
   testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
     exclude group: "com.vaadin.external.google", module: "android-json"
   }
+
   testImplementation group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
   testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.12.4'
   testImplementation group: 'io.rest-assured', name: 'rest-assured-all', version: versions.restAssured
@@ -433,6 +453,10 @@ dependencies {
   testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
 
 
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0', classifier: 'all', {
+    exclude group: 'commons-io', module: 'commons-io'
+    exclude group: 'org.apache.commons', module: 'commons-lang3'
+  }
 
   testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
   testImplementation "info.solidsoft.gradle.pitest:gradle-pitest-plugin:${versions.gradlePitest}"
